2002-05-17  Han-Wen  <hanwen@cs.uu.nl>

	* scm/music-functions.scm (check-start-chords): function to check
	for chords without \context. Apply automatically from parser.

2002-05-16  Han-Wen  <hanwen@cs.uu.nl>

	* lily/bar-line.cc: remove index entries. Texinfo can't handle  :
	in index entries.

	* scm/output-lib.scm: fix ez notation stems. 

	* lily/paper-outputter.cc: various fixes to speed up compilation.

2002-05-16  Mats Bengtsson  <mats.bengtsson@s3.kth.se>

	* scripts/lilypond-book.py: Don't import pre for Python >= 2.2

2002-05-16  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/lilypond-book.py (determine_format): Bugfix: correctly
	determine latex input.

	* stepmake/bin/install-sh: Include latest from libtool.

	* stepmake/configure: 
	* configure: Regenerate.

	* config.make.in: Remove dead variables.  Add OPTIONAL/REQUIRED lists.
	(USER_CFLAGS): Bugfix, include CPPFLAGS.

	* configure.in: Use new OPTIONAL/REQUIRED mechanism.

	* stepmake/aclocal.m4: Add mechanism for checking OPTIONAL or
	REQUIRED programs and version.  Try to continue configuring, list
	missing programs at the end, but don't generate a GNUmakefile if
	REQUIRED programs are missing.  Cleanups, junk obsolete stuff.
	Fix Cygwin detection, drop '32' suffix.  Hoping this is not too
	fancy for some older systems.

2002-05-16  Han-Wen  <hanwen@cs.uu.nl>

	* lily/score-engraver.cc (typeset_all): sanity check for items
	that are Y parent to spanner. 

	* lily/piano-pedal-engraver.cc (create_bracket_grobs): fix broken
	pedal spanners.

2002-05-15  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/*.cc: remove as many iostream use as possible. 

	* flower/ : remove text-db, text-stream, data-file.
	
2002-05-15  Han-Wen  <hanwen@cs.uu.nl>

	* scripts/lilypond-book.py: add --no-music option: strip all blocks.
	(completize_preamble): don't barf if no preamble present.
	(do_file): allow extensions on --output

	* scripts/ly2dvi.py (make_preview): make automatic preview of
	first system. Small cleanups.